welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:31: error: not found: value fini
		fini==true;
                ^